--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -62,6 +62,7 @@
       - fuse2
       - python-pip
       - python-pexpect
+      - inetutils
 
       # Terminal/Shell
       - ttf-nerd-fonts-symbols
