--- a/roles/arch/tasks/system.yml
+++ b/roles/arch/tasks/system.yml
@@ -79,14 +79,14 @@
 
 - name: download icu-73
   get_url:
-    url: https://archive.archlinux.org/packages/i/icu/icu-73.2.2-x86_64.pkg.tar.zst
+    url: https://archive.archlinux.org/packages/i/icu/icu-73.2-2-x86_64.pkg.tar.zst
     dest: /home/{{ user }}
     owner: "{{ user }}"
     group: "{{ user }}"
 
 - name: install icu-73
   pacman:
-    name: /home/{{ user }}/icu-73.2.2-x86_64.pkg.tar.zst
+    name: /home/{{ user }}/icu-73.2-2-x86_64.pkg.tar.zst
     state: present
 
 - name: install vim config file
