changing arch and polybar

--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -71,6 +71,8 @@
       - otf-font-awesome
       - ttf-font-awesome
       - ttf-jetbrains-mono-nerd
+      - ttf-iosevkaterm-nerd
+      - ttc-iosevka-ss08
 
       # Applications
       - pcmanfm
