--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -64,6 +64,7 @@
       - python-pexpect
       - inetutils
       - numlockx
+      - python-passlib
 
       # Terminal/Shell
       - ttf-nerd-fonts-symbols
