--- a/roles/arch/tasks/directories.yml
+++ b/roles/arch/tasks/directories.yml
@@ -14,7 +14,8 @@
       - ".config/rofi"
       - ".config/onedrive"
       - "git"
-      - ".config/QuiteRss"
+      - "vaults"
+      # - ".config/QuiteRss"
       - ".ansible/tmp"
       - ".cache/dconf"
       - ".config/i3blocks"
