--- a/roles/arch/files/config-color.ini
+++ b/roles/arch/files/config-color.ini
@@ -34,27 +34,34 @@ cyan = #2ac3de
 black = #000000
 white = #ffffff
 green1 = #32a852
-green2 = #6be38b
+#green2 = #6be38b
+green2 = #237038
 lgreen1 = #50cc9e
-lgreen2 = #9bebcd
+lgreen2 = #32ab02
 red1 = #cc241d
-red2 = #fb4934
+#red2 = #fb4934
+red2 = #ff0000
 orange1 = #fcab30
-orange2 = #fcc36d
+#orange2 = #fcc36d
+orange2 = #f79b0f
 purple1 = #cd4ff7
-purple2 = #e190fc
+#purple2 = #e190fc
+purple2 = #d34fff
 pink1 = #fa2fac
-pink2 = #fa78c8
+#pink2 = #fa78c8
+pink2 = #ff33b1
 dorange1 = #d65d0e
-dorange2 = #fe8019
+dorange2 = #bf6102
 lime1 = #d1fa61
 lime2 = #e3fc9d
 yellow1 = #98971a
-yellow2 = #b8bb28
+#yellow2 = #b8bb28
+yellow2 = #949602
 blue1 = #1938ff
 blue2 = #3f57f2
 turq1 = #00fbff
-turq2 = #abfeff
+#turq2 = #abfeff
+turq2 = #00babd
 
 ;=====================================================
 ;   variables
@@ -100,8 +107,8 @@ font-5 = ${fonts.font-5}
 
 modules-left = user lsp i3 lpd-bp wifi eth ldl-black title ldl-green
 modules-center = 
-modules-right = rdp-purple memory rdp-orange-purple filesystem rdp-turq-orange cpu rdp-yellow_turq updates-pacman rdp-red_yellow volume rdp-blue_red date rsp time rlp2
-
+modules-right = rdp-purple memory rdp-orange-purple filesystem rdp-turq-orange cpu rdp-orange-turq rdp-yellow_orange updates-pacman rdp-red_yellow volume rdp-blue_red date rsp time rlp2
+;inbox-imap-pythongpg 
 tray-position = right
 ;=====================================================
 ;   section/base_left_primary
@@ -139,7 +146,7 @@ format-full-padding = ${variables.label-padding}
 ;=====================================================
 [section/base_left_primary_green]
 
-format-foreground = ${colors.black}
+format-foreground = ${colors.white}
 format-background = ${colors.green2}
 format-connected-foreground = ${colors.material-foreground}
 format-connected-background = ${colors.green2}
@@ -294,7 +301,7 @@ format-full-padding = ${variables.label-padding}
 ;=====================================================
 [section/base_right_primary-orange]
 
-format-foreground = ${colors.black}
+format-foreground = ${colors.white}
 format-background = ${colors.orange2}
 format-connected-foreground = ${colors.black}
 format-connected-background = ${colors.orange2}
@@ -308,7 +315,7 @@ format-charging-foreground = ${colors.black}
 format-charging-background = ${colors.material-primary}
 format-discharging-foreground = ${colors.black}
 format-discharging-background = ${colors.material-primary}
-format-full-foreground = ${colors.black}
+format-full-foreground = ${colors.white}
 format-full-background = ${colors.material-orange2}
 
 format-padding = ${variables.label-padding}
@@ -325,7 +332,7 @@ format-full-padding = ${variables.label-padding}
 ;=====================================================
 [section/base_right_primary-turqoise]
 
-format-foreground = ${colors.black}
+format-foreground = ${colors.white}
 format-background = ${colors.turq2}
 format-connected-foreground = ${colors.black}
 format-connected-background = ${colors.turq2}
@@ -339,7 +346,7 @@ format-charging-foreground = ${colors.black}
 format-charging-background = ${colors.material-primary}
 format-discharging-foreground = ${colors.black}
 format-discharging-background = ${colors.material-primary}
-format-full-foreground = ${colors.black}
+format-full-foreground = ${colors.white}
 format-full-background = ${colors.material-turq2}
 
 format-padding = ${variables.label-padding}
@@ -356,7 +363,7 @@ format-full-padding = ${variables.label-padding}
 ;=====================================================
 [section/base_right_primary-yellow]
 
-format-foreground = ${colors.black}
+format-foreground = ${colors.white}
 format-background = ${colors.yellow2}
 format-connected-foreground = ${colors.black}
 format-connected-background = ${colors.yellow2}
@@ -370,7 +377,7 @@ format-charging-foreground = ${colors.black}
 format-charging-background = ${colors.material-primary}
 format-discharging-foreground = ${colors.black}
 format-discharging-background = ${colors.material-primary}
-format-full-foreground = ${colors.black}
+format-full-foreground = ${colors.white}
 format-full-background = ${colors.material-yellow2}
 
 format-padding = ${variables.label-padding}
@@ -387,7 +394,7 @@ format-full-padding = ${variables.label-padding}
 ;=====================================================
 [section/base_right_primary-purple]
 
-format-foreground = ${colors.black}
+format-foreground = ${colors.white}
 format-background = ${colors.purple2}
 format-connected-foreground = ${colors.material-foreground}
 format-connected-background = ${colors.purple2}
@@ -403,6 +410,37 @@ format-discharging-foreground = ${colors.material-foreground}
 format-discharging-background = ${colors.material-primary}
 format-full-foreground = ${colors.material-foreground}
 format-full-background = ${colors.material-purple2}
+
+format-padding = ${variables.label-padding}
+format-connected-padding = ${variables.label-padding}
+format-warn-padding = ${variables.label-padding}
+format-volume-padding = ${variables.label-padding}
+format-muted-padding = ${variables.label-padding}
+format-charging-padding = ${variables.label-padding}
+format-discharging-padding = ${variables.label-padding}
+format-full-padding = ${variables.label-padding}
+
+;=====================================================
+;   section/base_right_primary_darkorange
+;=====================================================
+[section/base_right_primary-darkorange]
+
+format-foreground = ${colors.material-foreground}
+format-background = ${colors.dorange2}
+format-connected-foreground = ${colors.material-foreground}
+format-connected-background = ${colors.red2}
+format-warn-foreground = ${colors.material-foreground}
+format-warn-background = ${colors.red2}
+format-volume-foreground = ${colors.material-foreground}
+format-volume-background = ${colors.red2}
+format-muted-foreground = ${colors.material-foreground}
+format-muted-background = ${colors.red2}
+format-charging-foreground = ${colors.material-foreground}
+format-charging-background = ${colors.material-primary}
+format-discharging-foreground = ${colors.material-foreground}
+format-discharging-background = ${colors.material-primary}
+format-full-foreground = ${colors.material-foreground}
+format-full-background = ${colors.material-dorange2}
 
 format-padding = ${variables.label-padding}
 format-connected-padding = ${variables.label-padding}
@@ -656,12 +694,12 @@ content-background = ${colors.yellow2}
 ;=====================================================
 ;   module/rdp-yellow_turq
 ;=====================================================
-[module/rdp-yellow_turq]
+[module/rdp-yellow_orange]
 type = custom/text
 
 content = %{T3}%{T-}
 content-foreground = ${colors.yellow2}
-content-background = ${colors.turq2}
+content-background = ${colors.dorange2}
 
 ;=====================================================
 ;   module/rdp-purple
@@ -672,6 +710,16 @@ type = custom/text
 content = %{T3}%{T-}
 content-foreground = ${colors.purple2}
 content-background = ${colors.material-light-background}
+
+;=====================================================
+;   module/rdp-orange-turq
+;=====================================================
+[module/rdp-orange-turq]
+type = custom/text
+
+content = %{T3}%{T-}
+content-foreground = ${colors.dorange2}
+content-background = ${colors.turq2}
 
 ;=====================================================
 ;   module/rdp-orange-purple
@@ -833,7 +881,7 @@ inherit = section/base_right_primary-purple
 interval = 1
 
 #label = %{T5}%{T-} %percentage_used:3%%
-label = %{T5}%{T-} %used% / %free%
+label = %{T5}%{T-} %used% / %free% (%gb_swap_used%)
 
 ;=====================================================
 ;   module/wifi
@@ -943,7 +991,7 @@ inherit = section/base_right_primary-yellow
 exec = ~/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
 interval = 20
 format-prefix = " "
-label-foreground = ${colors.black}
+label-foreground = ${colors.white}
 #label-padding = 1
 #format-prefix-padding = 1
 
@@ -959,7 +1007,7 @@ format-mounted-prefix = " 󱛟 "
 label-mounted =  "%percentage_used%% "
 label-mounted-background = ${colors.orange2}
 format-mounted-background = ${colors.orange2}
-format-mounted-foreground = ${colors.black}
+format-mounted-foreground = ${colors.white}
 label-padding = 1
 
 [module/inbox-imap-pythongpg]
@@ -969,7 +1017,7 @@ interval = 60
 #format-prefix = %{T8}%{T-}
 format-prefix = " "
 format-foreground = ${colors.white}
-format-background = ${colors.black}
+format-background = ${colors.dorange2}
 label-padding = 1
 format-prefix-padding = 1
 
