--- a/roles/arch/tasks/i3config.yml
+++ b/roles/arch/tasks/i3config.yml
@@ -106,7 +106,7 @@
   tags: Xresources
   copy:
     src: files/Xresources
-    dest: /home/{{ user }}/.XResources
+    dest: /home/{{ user }}/.Xresources
     owner: "{{ user }}"
     group: "{{ user }}"
     backup: yes
