--- a/roles/arch/tasks/git.yml
+++ b/roles/arch/tasks/git.yml
@@ -53,6 +53,15 @@
     update: yes
     force: true
 
+- name: install pacman-updates script
+  tags: pacman
+  copy:
+    src: files/updates-pacman-sh
+    dest: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    backup: yes
+
 - name: change polybar scripts permissions
   tags: polybar
   file:
@@ -75,12 +84,12 @@
   # become_user: "{{ user }}"
   # become_pass: "{{ userpass }}"
 
-- name: edit pacman-updates script
-  lineinfile:
-    dest: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
-    state: present
-    regexp: 'echo "# $updates"'
-    line: 'echo "$updates"'
+# - name: edit pacman-updates script
+#   lineinfile:
+#     dest: /home/{{ user }}/git/polybar/polybar-scripts/updates-pacman/updates-pacman.sh
+#     state: present
+#     regexp: 'echo "# $updates"'
+#     line: 'echo "$updates"'
 
 - name: edit inbox-imap script-1
   lineinfile:
