--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -65,6 +65,7 @@
       - inetutils
       - numlockx
       - python-passlib
+      - git-delta
 
       # Terminal/Shell
       - ttf-nerd-fonts-symbols
