--- a/roles/fedora/tasks/main.yml
+++ b/roles/fedora/tasks/main.yml
@@ -15,6 +15,7 @@
   - include_tasks: docker.yml
   - include_tasks: thunderbird-systray.yml
   - include_tasks: ../arch/tasks/obsidian.yml
+  - include_tasks: appimagelauncher.yml
   - include_tasks: work.yml
     # when: work is defined
 
