--- a/roles/fedora/tasks/work.yml
+++ b/roles/fedora/tasks/work.yml
@@ -49,12 +49,20 @@
       - /home/{{ user }}/Downloads/cisco-anyconnect-vpn-4.10.07073-1.x86_64.rpm
     state: present
     disable_gpg_check: true
-    
-- name: install Teams
-  dnf:
-    name: 'https://web.archive.org/web/20221130115736if_/https://packages.microsoft.com/yumrepos/ms-teams/teams-1.5.00.23861-1.x86_64.rpm'
-    state: present
-    disable_gpg_check: true
+
+- name: get Teams
+  get_url:
+    url: https://github.com/IsmaelMartinez/teams-for-linux/releases/download/v1.12.8/teams-for-linux-1.12.8.AppImage
+    dest: /home/{{ user }}/Downloads
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
+
+# - name: install Teams
+#   dnf:
+#     name: 'https://web.archive.org/web/20221130115736if_/https://packages.microsoft.com/yumrepos/ms-teams/teams-1.5.00.23861-1.x86_64.rpm'
+#     state: present
+#     disable_gpg_check: true
 
 # - name: download Teams
 #   get_url:
