--- a/roles/void/tasks/packages.yml
+++ b/roles/void/tasks/packages.yml
@@ -14,7 +14,6 @@
 
       #Applications
       - vscode
-      - quiterss
       - xdg-utils
       - xdg-user-dirs
       - curl
@@ -23,8 +22,8 @@
       - onedrive
       - linux-headers
       - pulseaudio
-      - linux-headers
       - python3-psutil
 
       # - xinit
+      # - quiterss
   #  state: latest
