--- a/roles/fedora/tasks/docker.yml
+++ b/roles/fedora/tasks/docker.yml
@@ -1,5 +1,5 @@
 - name: add docker repo
-  command: dnf config-manager --add-repo https://download.docker.com/linux/fedora/docker-ce.repo
+  command: dnf config-manager addrepo --from-repofile=https://download.docker.com/linux/fedora/docker-ce.repo
 
 - name: install docker
   tags: fedora,base,docker
