--- a/roles/fedora/tasks/thunderbird-systray.yml
+++ b/roles/fedora/tasks/thunderbird-systray.yml
@@ -1,5 +1,5 @@
 - name: add Mozilla add-on repo
-  command: dnf config-manager --add-repo https://download.opensuse.org/repositories/home:/Ximi1970:/Mozilla:/Add-ons/Fedora_38/home:Ximi1970:Mozilla:Add-ons.repo
+  command: dnf config-manager addrepo --from-repofile=https://download.opensuse.org/repositories/home:/Ximi1970:/Mozilla:/Add-ons/Fedora_38/home:Ximi1970:Mozilla:Add-ons.repo
 
 - name: install Thunderbird systray
   dnf:
