--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -9,6 +9,7 @@
     when: ansible_distribution == "Void"
   - include_tasks: directories.yml
   - include_tasks: tasks/packages.yml
+    when: ansible_distribution != "Void"
   - include_tasks: configs.yml
   - include_tasks: tasks/geany.yml
   - include_tasks: tasks/conky.yml
