--- a/roles/base/vars/Fedora.yml
+++ b/roles/base/vars/Fedora.yml
@@ -20,6 +20,7 @@ pkgmgr_remove_short: dr
 airline_theme: cobalt2
 vim_theme: iceberg
 omp_theme: powerlevel10k_rainbow
+copyq: copyq
 alias_template_file: alias.j2
 zshrc_template_file: zshrc.j2
 vimrc_template_file: vimrc.j2
