--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -7,6 +7,8 @@
     when: ansible_distribution == "Archlinux"
   - include_tasks: ../void/tasks/packages.yml
     when: ansible_distribution == "Void"
+  - include_tasks: ../void/tasks/users.yml
+    when: ansible_distribution == "Void"
   - include_tasks: directories.yml
   - include_tasks: tasks/packages.yml
     when: ansible_distribution != "Void"
