--- a/roles/void/tasks/theme-config.yml
+++ b/roles/void/tasks/theme-config.yml
@@ -34,7 +34,7 @@
   lineinfile:
     path: /home/{{ user }}/.vimrc
     regexp: '^Plug 'vim-airline/vim-airline'
-    line: '" Plug 'vim-airline/vim-airline'
+    state: absent
 
 - name: edit vimrc file - airline2
   tags: vimrc
@@ -42,7 +42,7 @@
   lineinfile:
     path: /home/{{ user }}/.vimrc
     regexp: '^Plug 'vim-airline/vim-airline-themes'
-    line: '" Plug 'vim-airline/vim-airline-themes'
+    state: absent
 
 # - name: apply wallpaper
 #   shell:
