Adding Virtualbox tasks to Void

--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -29,8 +29,8 @@
       - ripgrep
       - duf
       - vim
-      # - smbclient
-      # - neofetch
+      # - eza
+      - fastfetch
       - rsync
     state: latest
 
