--- a/roles/base/vars/Void.yml
+++ b/roles/base/vars/Void.yml
@@ -21,7 +21,7 @@ airline_theme: wombat
 vim_theme: gotham
 omp_theme: slimfat
 copyq: CopyQ
+fetch: fastfetch --load-config examples/10.jsonc
 alias_template_file: alias.j2
 zshrc_template_file: zshrc.j2
 vimrc_template_file: vimrc.j2
-fetch: neofetch
