--- a/roles/void/files/conky.conf
+++ b/roles/void/files/conky.conf
@@ -1,151 +1,108 @@
 
-
 conky.config = {
-
-	--Various settings
-
-		background = true,
-		cpu_avg_samples = 2,
-		diskio_avg_samples = 10,
-		double_buffer = true,
-		if_up_strictness = 'address',
-		net_avg_samples = 2,
-		no_buffers = true,
-		temperature_unit = 'celsius',
-		update_interval = 1,
-		imlib_cache_size = 0,
-    	cpu_avg_samples = 2,
-    	no_buffers = true,
-    	out_to_console = false,
-    	out_to_stderr = false,
-    	extra_newline = false,
-    	own_window = true,
-    	stippled_borders = 0,
-    	update_interval = 1.0,
-    	uppercase = false,
-    	use_spacer = 'none',
-    
-    -- Placement
-
-    	alignment = 'top_right',
-    	gap_x = 0,
-    	gap_y = 0,
-		minimum_width = 280,
-		maximum_width = 280,
-		
-	--Graphical
-
-		border_inner_margin = 10,
-		border_outer_margin = 10,
-		draw_borders = false,
-		draw_graph_borders = false,
-		draw_shades = false,
-		draw_outline = false,
-		show_graph_scale = false,
-    	show_graph_range = false,
-    	own_window_argb_visual = true,
-    	own_window_transparent = true,
-    	-- own_window_argb_value = 191,
-    	own_window_type = 'conky', -- options are: normal/override/dock/desktop/panel
-	-- Text
-
-		-- text
-		font = 'JetBrains Mono:size=9',
-		
-		format_human_readable = true,
-		use_xft = true,
-	    max_text_width = 0,
-		short_units = true,
-		xftalpha = 1,
-    
-    -- Colors
-    	
-    	default_color = 'white',
-    	default_outline_color = 'white',
-    	default_shade_color = 'white',
-    
-    	-- md blue (200)
-    	color1 = 'b3e5fc',										-- title color
-    	
-    	-- md light blue (200 -> light)
-    	color2 = 'e6ffff',										-- subtitle color
-    	
-    	-- md blue (200)
-    	color3 = '90caf9',										-- text color
-    	
-    	-- md dark blue (200 -> dark)
-    	color4 = 'ffe0b2'										-- accent color
-    	
-}
-
--- text 
+  alignment = 'top_right',
+  background = true,
+  border_width = 0.5,
+  cpu_avg_samples = 4,
+  default_color = 'white',
+  default_outline_color = 'grey',
+  default_shade_color = 'black',
+  draw_borders = true,
+  draw_graph_borders = true,
+  draw_outline = false,
+  draw_shades = false,
+  use_xft = true,
+  font = 'OpenSans:size=10',
+  gap_x = 1,
+  gap_y = 0,
+  maximum_width = 400,
+  minimum_height = 5,
+  minimum_width = 5,
+  net_avg_samples = 2,
+  double_buffer = true,
+  out_to_console = false,
+  out_to_stderr = false,
+  extra_newline = false,
+  own_window = true,
+  own_window_colour = '000000',
+  own_window_class = 'Conky',
+  own_window_argb_visual = true,
+  own_window_type = 'normal',
+  own_window_transparent = true,
+  own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
+  stippled_borders = 0,
+  update_interval = 1,
+  uppercase = false,
+  use_spacer = 'none',
+  show_graph_scale = false,
+  show_graph_range = false
+};
 
 conky.text = [[
-${font MesloLGS NF Regular:size=30}${color1}${alignc}${time %I:%M}
-${voffset -36}${font}${color3}Date: ${alignr}${color}${time %a, %d %B %Y}
-${color3}Kernel: ${alignr}${color}${kernel}
-#${color3}Distro: ${alignr}${color}${execi 6000 lsb_release -d | grep 'Descr'|awk {'print $2 " " $3" " $4"" $5'}}
-${color3}Distro: ${alignr}${color}${execi 6000 awk -F'=|"' '/PRETTY/{print $3}' /etc/os-release}
-${color3}Uptime: ${alignr}${color}${uptime}
-
-#------------+
-#TEMPS
-#------------+
-${font}${color1}TEMPS ${hr 2}
-${voffset 1}${color4}${if_match ${hwmon 3 temp 1} > 75}${color8}${endif}\
-${if_match ${hwmon 3 temp 1} > 90}${color9}${endif}${font Font Awesome 5 Free:style=Solid:pixelsize=16}${font}${color1} temp:\
-${alignr}${color4}${if_match ${hwmon 3 temp 1} > 75}${color8}\
-${endif}${if_match ${hwmon 3 temp 1} > 90}${color9}${endif}${hwmon 3 temp 1}${color1}°C
-#------------+
+${font 3270 Nerd Font:Regular:size=18}$alignc${color Green} ${execi 100000 lsb_release -sc}
+#${font Oxygen Sans:Regular:size=18}$alignc${color Lime}${execi 100000 lsb_release -sc}
+${voffset -80} 
+${color white}
+${font}
+${font OxygenSans:pixelsize=18}$alignc${time %A} ${color white}${time %b}-${color white}${time  %d}-${color white}${time %Y}${font}
+${font OxygenSans:pixelsize=18}$alignc${time %I:%M} ${color white}
+#System
+${font MesloLGS NF:size=15}${color Tan1} ${font OxygenSans:bold:size=11}${color Tan1}SYSTEM ${color White}${hr 2}
+$font${color White}$sysname $kernel $alignr $machine
+Hostname: $alignr${nodename}
+Uptime: $alignr${uptime}
+#System Updates: $alignr ${execpi 3600 checkupdates | wc -l}  Updates
 #CPU
-#------------+
-${font}${color1}PROCESSOR ${hr 2}
-${voffset 5}${font}${color3}Name: $color$alignr${execi 6000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-16}
-${color3}Freq: $color${freq_g} GHz$alignr${color3}Usage: $color${cpu}%
-${color4}${cpugraph 26}
-${voffset 1}${color3}${if_match ${cpu cpu0} >= 25}${color8}${endif}\
-${if_match ${cpu cpu0} >= 75}${color9}${endif}\
-${font Font Awesome 5 Free:style=Solid:pixelsize=16}${font}${color1} cpu load:\
-${alignr}${color3}${if_match ${cpu cpu0} >= 25}${color8}${endif}\
-${if_match ${cpu cpu0} >= 75}${color9}${endif}${cpu cpu0}${color1}%
-#------------+
-#CPU CORES
-#------------+
-${voffset 5}${color3} 1${goto 45}$color${cpu cpu1}%${goto 85}${color4}${cpubar cpu1 13, 60}${goto 170}${color3} 2${goto 195}$color${cpu cpu2}%${goto 235}${color4}${cpubar cpu2 13, 60}
-${voffset 2}${color3} 3${goto 45}$color${cpu cpu3}%${goto 85}${color4}${cpubar cpu3 13, 60}${goto 170}${color3} 4${goto 195}$color${cpu cpu4}%${goto 235}${color4}${cpubar cpu4 13, 60}
-${voffset 2}${color3} 5${goto 45}$color${cpu cpu5}%${goto 85}${color4}${cpubar cpu5 13, 60}${goto 170}${color3} 6${goto 195}$color${cpu cpu6}%${goto 235}${color4}${cpubar cpu6 13, 60}
-${voffset 2}${color3} 7${goto 45}$color${cpu cpu7}%${goto 85}${color4}${cpubar cpu7 13, 60}${goto 170}${color3} 8${goto 195}$color${cpu cpu8}%${goto 235}${color4}${cpubar cpu8 13, 60}
-#------------+
-#PROCESSES
-#------------+
-${voffset 5}${color3}Name${alignr}CPU%
-$color4${top name 1}$alignr${top cpu 1}$color
-${top name 2} ${alignr}${top cpu 2}
-${top name 3} ${alignr}${top cpu 3}
-${top name 4} ${alignr}${top cpu 4}
-${top name 5} ${alignr}${top cpu 5}
-${voffset 5}${color3}Threads: ${color}$threads${alignr}${color3}Running: ${color}${running_threads}
-${color3}Processes: ${color}${processes}${alignr}${color3}Running:$color ${running_processes}
-#------------+
+${font MesloLGS NF:size=14}${color Tan1} ${font OxygenSans:bold:size=11}${color Tan1}CPU ${color White}${hr 2}
+#$font${color White}Temperature: $alignr ${acpitemp} °C
+${font OpenSans:bold:size=10}${color White}CPU USAGE: ${cpu cpu0}% 
+$font${color White}CPU1 ${freq_g 1}Ghz  ${cpubar cpu1}
+CPU2 ${freq_g 2}Ghz  ${cpubar cpu2}
+#CPU3 ${freq_g 3}Ghz  ${cpubar cpu3}
+#CPU4 ${freq_g 4}Ghz  ${cpubar cpu4}
+#CPU5 ${freq_g 5}Ghz  ${cpubar cpu5}
+#CPU6 ${freq_g 6}Ghz  ${cpubar cpu6}
+#CPU7 ${freq_g 7}Ghz  ${cpubar cpu7}
+#CPU8 ${freq_g 8}Ghz  ${cpubar cpu8}
+${cpugraph} $color
 #MEMORY
-#------------+
-${font}${color1}MEMORY ${hr 2}
-${voffset 5}${font}${color3}Used: ${color}${mem} ($memperc%)${color3}${alignr}Free: ${color}${memeasyfree}
-${color4}${membar}
-${voffset 5}${color3}Name${alignr}MEM%
-${color4}${top_mem name 1} ${alignr}${top_mem mem 1}${color}
-${top_mem name 2} ${alignr}${top_mem mem 2}
-${top_mem name 3} ${alignr}${top_mem mem 3}
-${top_mem name 4} ${alignr}${top_mem mem 4}
-#------------+
-#NETWORK
-#------------+
-${font}${color1}NETWORK ${hr 2}
-${voffset 5}${font}${color3}${addr wlp2s0}${alignr}${font}${color}${if_existing /sys/class/net/wlp2s0/operstate up}ONLINE${else}OFFLINE${endif}
-${font}${color}
-${color3}Down: ${color}${downspeed wlp2s0}/s  ${color3}${alignr} Total: ${color}${totaldown wlp2s0}
-${color4}${downspeedgraph wlp2s0}${color}
-${color3}Up: ${color}${upspeed wlp2s0}/s      ${color3}${alignr} Total: ${color}${totalup wlp2s0}
-${color4}${upspeedgraph wlp2s0}${color}
-]]
+${font MesloLGS NF:size=14}${color Tan1} ${font OxygenSans:bold:size=11}${color Tan1}MEMORY ${color White}${hr 2}
+$font${color White}MEM $alignc $mem / $memmax $alignr $memperc%
+$membar
+$font${color White}SWAP $alignc $swap / $swapmax $alignr $swapperc%
+$swapbar
+#HDD
+${font MesloLGS NF:size=15}${color Tan1} ${font OxygenSans:bold:size=11}${color Tan1}SSD ${color White}${hr 2}
+#$font${color White}Boot $alignc ${fs_used /boot} / ${fs_size /boot} $alignr ${fs_used_perc /boot}%
+#${fs_bar /boot}
+$font${color White}Root $alignc ${fs_used /} / ${fs_size /} $alignr ${fs_used_perc /}%
+${fs_bar /}
+#$font${color White}Home $alignc ${fs_used /home} / ${fs_size /home} $alignr ${fs_used_perc /home}%
+#${fs_bar /home}
+#TOP PROCESSES
+${font MesloLGS NF:size=15}${color Tan1} ${font OxygenSans:bold:size=11}${color Tan1}TOP PROCESSES ${color White}${hr 2}
+${color White}$font${top_mem name 1}${alignr}${top_mem mem 1} %
+$font${top_mem name 2}${alignr}${top_mem mem 2} %
+$font${top_mem name 3}${alignr}${top_mem mem 3} %
+$font${top_mem name 4}${alignr}${top_mem mem 4} %
+#NETWORK WLAN0
+${if_existing /proc/net/route enp0s3}${font MesloLGS NF:size=15}${color Tan1} ${font OxygenSans:bold:size=11}${color Tan1}NETWORK ${color White}${hr 2}
+
+${wireless_link_bar enp0s3}
+$font${color White}Local IP: $alignr ${addrs enp0s3}
+Down Speed: $alignr ${downspeed enp0s3}/s
+Up Speed: $alignr ${upspeed enp0s3}/s
+${hr 2}
+Downloaded: $alignr ${totaldown enp0s3}
+Uploaded: $alignr ${totalup enp0s3}
+#NETWORK ETH0
+${else}${if_existing /proc/net/route eth0}${font MesloLGS NF:size=15}${color Tan1} ${font OxygenSans:bold:size=11}${color Tan1}NETWORK ${color White}${hr 2}
+$font${color White}Local IP: $alignr ${addrs eth0}
+${hr 2}
+Down Speed: $alignr ${downspeed eth0}/s
+Up Speed: $alignr ${upspeed eth0}/s
+${hr 2}
+Downloaded: $alignr ${totaldown eth0}
+Uploaded: $alignr ${totalup eth0}${endif}${endif}
+]];
 
