adding Arch package

--- a/roles/arch/tasks/packages.yml
+++ b/roles/arch/tasks/packages.yml
@@ -66,6 +66,7 @@
       - numlockx
       - python-passlib
       - git-delta
+      - plocate
 
       # Terminal/Shell
       - ttf-nerd-fonts-symbols
