removing fastfetch from base packages

--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -30,7 +30,7 @@
       - duf
       - vim
       # - eza
-      - fastfetch
+      # - fastfetch
       - rsync
       - syncthing
     state: latest
