--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,29 +1,42 @@
-- include_vars: "{{ ansible_distribution }}.yml"
+# Load distribution-specific variables
+- name: Load distribution-specific variables
+  include_vars: "{{ ansible_distribution }}.yml"
 
-- block:
-  - include_tasks: ../arch/tasks/packages.yml
-    when: ansible_distribution == "Archlinux"
-  - include_tasks: ../arch/tasks/users.yml
-    when: ansible_distribution == "Archlinux"
-  - include_tasks: ../void/tasks/packages.yml
-    when: ansible_distribution == "Void"
-  - include_tasks: ../void/tasks/users.yml
-    when: ansible_distribution == "Void"
-  - include_tasks: directories.yml
-  - include_tasks: tasks/packages.yml
-    # when: ansible_distribution != "Void"
-  - include_tasks: configs.yml
-  - include_tasks: tasks/geany.yml
-  - include_tasks: tasks/conky.yml
-  - include_tasks: tasks/fonts.yml
-  - include_tasks: tasks/onedrivegui.yml   ## Can't use with Arch
-    when: ansible_distribution != "Archlinux"
-  - include_tasks: tasks/nano.yml
-  - include_tasks: fzf.yml
+- name: Execute main configuration tasks
+  block:
+    - name: Arch Linux specific tasks
+      include_tasks: "{{ item }}"
+      loop:
+        - ../arch/tasks/packages.yml
+        - ../arch/tasks/users.yml
+      when: ansible_distribution == "Archlinux"
 
-    # - include_tasks: tasks/directories.yml
-# - include_tasks: tasks/notepadqq_dependencies.yml
-  # - include_tasks: tasks/pidgin_dependencies.yml
-  # - include_tasks: tasks/google_chat.yml
-  # - include_tasks: tasks/notepadqq.yml
-  # - include_tasks: tasks/sshd.yml
+    - name: Void Linux specific tasks
+      include_tasks: "{{ item }}"
+      loop:
+        - ../void/tasks/packages.yml
+        - ../void/tasks/users.yml
+      when: ansible_distribution == "Void"
+
+    - name: create directories
+      include_tasks: directories.yml
+    
+    - name: install general packages
+      include_tasks: packages.yml
+      when: ansible_distribution != "Void"
+    
+    - name: apply config files
+      include_tasks: configs.yml
+
+    - name: configure applications
+      include_tasks: "{{ item }}"
+      loop:
+        - geany.yml
+        - conky.yml
+        - fonts.yml
+        - vim.yml
+        - fzf.yml
+
+    - name: Configure OneDrive GUI
+      include_tasks: tasks/onedrivegui.yml
+      when: ansible_distribution != "Archlinux"
