--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -1,37 +1,80 @@
-- name: install packages
-  tags: base
-  package:
-    name:
-      - zsh
-      - zsh-syntax-highlighting
-      - zsh-autosuggestions
-      - tilix
-      - htop
-      - conky
-      - ncdu
-      - bat
-      # - onedrive  ## Not available on Arch
-      - samba
-      - cifs-utils
-      - "{{ firefox_package }}"
-      - thunderbird
-      - "{{ libreoffice_package }}"
-      - gnupg
-      - geany
-      - unzip
-      - dconf-editor
-      - "{{ chromium_package }}"
-      - "{{ ssh_package }}"
-      - btop
-      - "{{ copyq }}"
-      - "{{ fd_package }}"
-      - fzf
-      - ripgrep
-      - duf
-      - vim
-      # - eza
-      # - fastfetch
-      - rsync
-      - syncthing
-    state: latest
+---
 
+- name: install packages
+  vars:
+    package_groups:
+      essential:
+        - zsh
+        - zsh-syntax-highlighting
+        - zsh-autosuggestions
+        - tilix
+        - htop
+        - btop
+        - conky
+        - ncdu
+        - samba
+        - cifs-utils
+        - thunderbird
+        - gnupg
+        - geany
+        - unzip
+        - dconf-editor
+        - fzf
+        - ripgrep
+        - duf
+        - vim
+        - rsync
+        - syncthing
+
+      variable:
+        - "{{ bat }}"
+        - "{{ firefox_package }}"
+        - "{{ libreoffice_package }}"
+        - "{{ chromium_package }}"
+        - "{{ ssh_package }}"
+        - "{{ copyq }}"
+        - "{{ fd_package }}"
+
+      partial_availability:
+        - eza
+        - fastfetch
+        - onedrive  ## Not available on Arch
+
+  block:
+    - name: install essential packages
+      package:
+        name: "{{ package_groups.essential }}"
+        state: present
+    
+    - name: install variable packages
+      package:
+        name: "{{ package_groups.variable }}"
+        state: present
+      ignore_errors: true
+      register: variable_package_result
+    
+    - name: install packages not available on all distributions
+      package:
+        name: "{{ package_groups.partial_availability }}"
+        state: present
+      ignore_errors: true
+      register: partial_package_result
+
+    - name: report failed variable installations
+      debug:
+        msg: "Failed to install some packages: {{ variable_package_result.msg | default('Unknown error') }}"
+      when: 
+        - variable_package_result is defined
+        - variable_package_result.failed | default(false)
+
+    - name: report failed partial availability installations
+      debug:
+        msg: "Failed to install some packages: {{ partial_package_result.msg | default('Unknown error') }}"
+      when: 
+        - partial_package_result is defined
+        - partial_package_result.failed | default(false)
+        
+  rescue:
+    - name: handle package installation failure
+      debug:
+        msg: "Package installation failed. Check package names for your distribution."
