Refactoring Fedora role tasks

--- a/roles/fedora/tasks/directories.yml
+++ b/roles/fedora/tasks/directories.yml
@@ -13,5 +13,5 @@
       - ".themes"
       - ".icons"
       - ".poshthemes"
-      - ".config/QuiteRss"
       - ".config/onedrive"
+      - ".config/audacious"
