--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -25,6 +25,7 @@
         - vim
         - rsync
         - syncthing
+        - kitty
 
       variable:
         - "{{ bat }}"
@@ -39,6 +40,7 @@
         - eza
         - fastfetch
         - onedrive  ## Not available on Arch
+        - zoxide
 
   block:
     - name: install essential packages
