--- a/roles/fedora/tasks/packages.yml
+++ b/roles/fedora/tasks/packages.yml
@@ -5,14 +5,12 @@
     name: "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_version }}.noarch.rpm"
     state: present
     disable_gpg_check: yes
-  when: ansible_distribution == "Fedora"
 
 - name: Install RPM Fusion NonFree
   dnf:
     name: "https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_version }}.noarch.rpm"
     state: present
     disable_gpg_check: yes
-  when: ansible_distribution == "Fedora"
 
 - name: install fedora specific packages
   tags: fedora,base
@@ -24,18 +22,19 @@
       - deadbeef-plugins
       - audacious
       - nomacs
-      - onedrive
       - git-delta
-      - fastfetch
-    state: latest
-  when: ansible_distribution == "Fedora"
-
-- name: install openh264
-  tags: fedora,base,openh264
-  dnf:
-    name:
       - gstreamer1-plugin-openh264
       - mozilla-openh264
     enablerepo: fedora-cisco-openh264
-    state: present
+    state: latest
   when: ansible_distribution == "Fedora"
+
+# - name: install openh264
+#   tags: fedora,base,openh264
+#   dnf:
+#     name:
+#       - gstreamer1-plugin-openh264
+#       - mozilla-openh264
+#     enablerepo: fedora-cisco-openh264
+#     state: present
+#   when: ansible_distribution == "Fedora"
