--- a/roles/fedora/tasks/oh-my-posh.yml
+++ b/roles/fedora/tasks/oh-my-posh.yml
@@ -1,15 +1,4 @@
-# - name: install oh-my-posh
-#   tags: oh-my-posh,git
-#   get_url:
-#     url: https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64
-#     dest: /usr/local/bin/oh-my-posh
-#     mode: +x
-
-# - name: set oh-my-posh to executable
-#   tags: oh-my-posh
-#   file:
-#     path: /usr/local/bin/oh-my-posh
-#     mode: +x
+---
 
 - name: install oh-my-posh
   shell: curl -s https://ohmyposh.dev/install.sh | bash -s
@@ -24,3 +13,26 @@
     owner: "{{ user }}"
     group: "{{ user }}"
 
+- name: copy oh-my-posh config
+  copy:
+    src: files/powerlevel10k_rainbow.omp.json
+    dest: /home/{{ user }}/.poshthemes/
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    backup: yes
+
+
+
+
+# - name: install oh-my-posh
+#   tags: oh-my-posh,git
+#   get_url:
+#     url: https://github.com/JanDeDobbeleer/oh-my-posh/releases/latest/download/posh-linux-amd64
+#     dest: /usr/local/bin/oh-my-posh
+#     mode: +x
+
+# - name: set oh-my-posh to executable
+#   tags: oh-my-posh
+#   file:
+#     path: /usr/local/bin/oh-my-posh
+#     mode: +x
