testing virtual box on antix

--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -38,6 +38,7 @@
 
       partial_availability:
         - eza
+      when: ansible_distribution == "Debian"
         - fastfetch
         - onedrive  ## Not available on Arch
         - zoxide
